k8s/gateway/targeting-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: targeting-route
  namespace: targeting
spec:
  parentRefs:
    - name: app-gateway
      namespace: gateway
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /targeting
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: targeting-service
          port: 80
